# acyclic-dfa

./: .gitignore  README.md  acyclic-dfa.cabal  bench.csv  bench.ods  cabal.project  hie.yaml  make_plots.R  run_bench.sh  stack.yaml
bench/: adfa-benchmark.hs
benchmark_results/: after.csv  baseline.csv  regressions.py
doc/: bench.csv  bench.ods  bench_preprocessed.csv
example/: hextalk_large8.dot  words-to-graph.hs
src/: Util.hs
src/Data/: ADFA.hs  MSeq.hs  SVector.hs  These.hs
src/Data/ADFA/: Algorithm.hs  IdMap.hs  IdSet.hs  IdVector.hs  Internal.hs  NodeId.hs  Util.hs
src/Data/ADFA/IdVector/: Unsafe.hs
src/Data/SVector/: Internal.hs
src/Data/Vector/: Growable.hs
test/Data/ADFA/: ADFASpec.hs  Gen.hs
tmp/: after.csv  baseline.csv  regressions.py
